--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,8 +4,8 @@
     <div class="max-w-7xl mx-auto">
       <div class="bg-white shadow-md rounded-lg p-6">
         <div class="flex justify-between items-center mb-6">
-            <h2 class="text-2xl font-semibold text-primary">Welcome, Salim</h2>
-            <button (click)="logout()" class="px-3 py-1 bg-blue-900 text-white rounded-lg hover:bg-blue-800">Logout</button>
+            <h2 class="text-2xl font-semibold text-primary">Welcome, {{ username }} </h2>
+            <button (click)="logout()" class="px-3 py-1 bg-blue-900 text-white rounded-2xl hover:bg-blue-800">Logout</button>
           </div>
           
   
@@ -36,4 +36,9 @@
       </div>
     </div>
   </div>
-  
+
+
+ 
+
+
+ 
