--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,48 @@
-
+<nav class="bg-white shadow-lg w-full">
+    <div class="max-w-6xl mx-auto px-4">
+      <div class="flex justify-between">
+        <div class="flex space-x-7">
+          <div>
+            <a href="#" class="flex items-center py-4 px-2">
+              <span class="font-semibold text-gray-500 text-lg">E-Bank Solution</span>
+            </a>
+          </div>
+          <div class="hidden md:flex items-center space-x-1">
+            <a href="" class="py-4 px-2 text-gray-500  hover:text-blue-900 transition duration-300">Accueil</a>
+            <a href="" class="py-4 px-2 text-gray-500   hover:text-blue-900 transition duration-300">Comptes</a>
+            <a href="" class="py-4 px-2 text-gray-500  hover:text-blue-900 transition duration-300">Prêts</a>
+            <a href="" class="py-4 px-2 text-gray-500  hover:text-blue-900 transition duration-300">Investissements</a>
+            <a href="" class="py-4 px-2 text-gray-500  hover:text-blue-900 transition duration-300">Contact</a>
+          </div>
+        </div>
+        <!-- <div class="hidden md:flex items-center space-x-3 ">
+          <a href="" class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-blue-900 hover:text-white transition duration-300">Connexion</a>
+          <a href="" class="py-2 px-2 font-medium text-white bg-blue-900 rounded hover:bg-blue-800 transition duration-300">S'inscrire</a>
+        </div> -->
+        <div class="md:hidden flex items-center">
+          <button class="outline-none mobile-menu-button">
+            <svg class="w-6 h-6 text-gray-500 hover:text-blue-500"
+              x-show="!showMenu"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path d="M4 6h16M4 12h16M4 18h16"></path>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="hidden mobile-menu">
+      <ul class="">
+        <li><a href="#" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Accueil</a></li>
+        <li><a href="#" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Comptes</a></li>
+        <li><a href="#" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Prêts</a></li>
+        <li><a href="#" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Investissements</a></li>
+        <li><a href="#" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
