--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,17 +1,25 @@
-<div class="container mx-auto mt-10">
-    <div class="max-w-md mx-auto bg-white p-5 rounded-md shadow-sm">
-      <h2 class="text-2xl font-bold mb-4">Login</h2>
-      <form (ngSubmit)="onSubmit()">
-        <div class="mb-4">
-          <label class="block text-gray-700">Username</label>
-          <input type="text" [(ngModel)]="username" name="username" class="w-full p-2 border border-gray-300 rounded" required>
-        </div>
-        <div class="mb-4">
-          <label class="block text-gray-700">Password</label>
-          <input type="password" [(ngModel)]="password" name="password" class="w-full p-2 border border-gray-300 rounded" required>
-        </div>
-        <button type="submit" class="w-full bg-blue-900 text-white p-2 rounded">Login</button>
-      </form>
-    </div>
+<div class="flex items-center justify-center min-h-screen bg-gray-100">
+  <div class="w-full max-w-sm bg-white p-8 rounded-lg shadow-lg">
+    <h2 class="text-3xl font-semibold mb-6 text-center text-gray-800">Login</h2>
+    <form (ngSubmit)="onSubmit()">
+      <div class="mb-5">
+        <label for="username" class="block text-gray-700 text-sm font-medium mb-2">Username</label>
+        <input type="text" [(ngModel)]="username" name="username" id="username"
+               class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-200"
+               required>
+      </div>
+      <div class="mb-6">
+        <label for="password" class="block text-gray-700 text-sm font-medium mb-2">Password</label>
+        <input type="password" [(ngModel)]="password" name="password" id="password"
+               class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-200"
+               required>
+      </div>
+      <button type="submit"
+              class="w-full bg-blue-900 text-white py-2 px-4 rounded-lg shadow-md hover:bg-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-200">
+        Login
+      </button>
+    </form>
   </div>
+</div>
+
   
