--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<br>
+<!-- <br>
 <br>
 
 <footer class="bg-gray-800 text-white">
@@ -32,4 +32,4 @@
         <p>&copy; 2024 BankName. Tous droits réservés.</p>
       </div>
     </div>
-  </footer>
+  </footer> -->
