--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white shadow-lg w-full">
+<!-- <nav class="bg-white shadow-lg w-full">
     <div class="max-w-6xl mx-auto px-4">
       <div class="flex justify-between">
         <div class="flex space-x-7">
@@ -14,12 +14,18 @@
             <a href="" class="py-4 px-2 text-gray-500  hover:text-blue-900 transition duration-300">Investissements</a>
             <a href="" class="py-4 px-2 text-gray-500  hover:text-blue-900 transition duration-300">Contact</a>
           </div>
-        </div>
+        </div> -->
+
+
+
         <!-- <div class="hidden md:flex items-center space-x-3 ">
           <a href="" class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-blue-900 hover:text-white transition duration-300">Connexion</a>
           <a href="" class="py-2 px-2 font-medium text-white bg-blue-900 rounded hover:bg-blue-800 transition duration-300">S'inscrire</a>
         </div> -->
-        <div class="md:hidden flex items-center">
+
+
+
+        <!-- <div class="md:hidden flex items-center">
           <button class="outline-none mobile-menu-button">
             <svg class="w-6 h-6 text-gray-500 hover:text-blue-500"
               x-show="!showMenu"
@@ -45,4 +51,4 @@
         <li><a href="#" class="block text-sm px-2 py-4 hover:bg-blue-500 transition duration-300">Contact</a></li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
