--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
                required>
       </div>
       <button type="submit"
-              class="w-full bg-blue-900 text-white py-2 px-4 rounded-lg shadow-md hover:bg-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-200">
+      class="w-full py-2 px-4 rounded-lg shadow-md text-white font-bold bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-200">
         Login
       </button>
     </form>
