Ajout de l'affichage, ajout et suppression de bénéficiaires, et mise à jour des services et composants associés

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,11 +26,12 @@
               </a>
             </li>
             <li class="mb-4">
-              <a routerLink="/statistics" class="flex items-center p-2 hover:bg-gray-200 rounded">
-                <span class="material-icons">bar_chart</span>
-                <span class="ml-2">Statistics</span>
-              </a>
-            </li>
+                <a routerLink="/beneficiaries" class="flex items-center p-2 hover:bg-gray-200 rounded">
+                  <span class="material-icons">people</span>
+                  <span class="ml-2">Beneficiaries</span>
+                </a>
+              </li>
+              
             <li class="mb-4">
               <a routerLink="/messages" class="flex items-center p-2 hover:bg-gray-200 rounded">
                 <span class="material-icons">message</span>
