Mise à jour du style d'affichage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
             <li class="mb-4">
               <a routerLink="/wallet" class="flex items-center p-2 hover:bg-gray-200 rounded">
                 <span class="material-icons">account_balance_wallet</span>
-                <span class="ml-2">My Wallet</span>
+                <span class="ml-2">Compte</span>
               </a>
             </li>
             <li class="mb-4">
@@ -34,8 +34,8 @@
               
             <li class="mb-4">
               <a routerLink="/messages" class="flex items-center p-2 hover:bg-gray-200 rounded">
-                <span class="material-icons">message</span>
-                <span class="ml-2">Message</span>
+                <span class="material-icons">credit_card</span>
+                <span class="ml-2">Cards</span>
               </a>
             </li>
             <li class="mb-4">
