--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -75,7 +75,7 @@
         <input type="text" placeholder="Search..." class="border rounded-full px-4 py-2 w-64 mr-4">
         <div class="flex items-center">
           <img src="https://img.freepik.com/photos-gratuite/portrait-homme-riant_23-2148859448.jpg?size=338&ext=jpg&ga=GA1.1.386372595.1721174400&semt=ais_user" width="40px" height="40px" alt="User Avatar" class="rounded-full ">
-          <span>{{ username }}</span>
+          <!-- <span>{{ username }}</span> -->
         </div>
       </div>
     </div>
@@ -107,20 +107,20 @@
           <h3 class="text-lg font-semibold mb-4">My Card</h3>
           <div class="flex justify-between items-center">
             <div class="flex space-x-4">
-              <div class="bg-blue-600 text-white p-4 rounded-lg">
+              <div class="bg-gradient-to-r from-blue-400 to-purple-800 hover:from-blue-700 hover:to-purple-700 text-white p-4 rounded-lg">
                 <h4 class="text-sm">Total Balance</h4>
                 <p class="text-xl font-bold">$10,120.00</p>
                 <p class="text-xs">**** 2090</p>
                 <p class="text-xs">04/24</p>
               </div>
-              <div class="bg-pink-600 text-white p-4 rounded-lg">
+              <div class="bg-gradient-to-r from-red-400 to-pink-800 hover:from-red-600 hover:to-pink-600 text-white p-4 rounded-lg">
                 <h4 class="text-sm">Total Balance</h4>
                 <p class="text-xl font-bold">$6,150.10</p>
                 <p class="text-xs">**** 1832</p>
                 <p class="text-xs">06/22</p>
               </div>
             </div>
-            <button class="bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 focus text-white px-4 py-2 rounded-full">Add New</button>
+            <button class="bg-indigo-600 focus text-white px-4 py-2 rounded-full">Add New</button>
           </div>
         </div>
 
