--- a/src/app/components/beneficiaries/beneficiaries.component.html
+++ b/src/app/components/beneficiaries/beneficiaries.component.html
@@ -2,7 +2,7 @@
 <div class="bg-white p-8">
     <div class="container mx-auto">
       <!-- Add Beneficiary Button -->
-      <button (click)="openModal()" class="mb-8 bg-gradient-to-r mt-4 mr-4 bg-gradient-to-r from-blue-600 to-purple-600 hover:from-blue-700 hover:to-purple-700 focus text-white px-4 py-2 rounded-full transform hover:scale-105 transition duration-300 ease-in-out">
+      <button (click)="openModal()" class="mb-8  mt-4 mr-4 bg-indigo-600  text-white px-4 py-2 rounded-full transform hover:scale-105 transition duration-300 ease-in-out">
         + Add Beneficiary
       </button>
   
@@ -21,8 +21,8 @@
             </div>
             <p class="text-lg text-gray-700 mb-4">Account: {{ beneficiary.accountNumber }}</p>
             <div class="flex justify-end space-x-3">
-              <button (click)="editBeneficiary(beneficiary)" class="bg-indigo-400 text-white px-4 py-2 rounded-full hover:bg-indigo-600 transition duration-300 ease-in-out">Edit</button>
-              <button (click)="deleteBeneficiary(beneficiary.beneficiaireId)" class="bg-red-500 text-white px-4 py-2 rounded-full hover:bg-red-600 transition duration-300 ease-in-out">Delete</button>
+              <button (click)="editBeneficiary(beneficiary)" class="bg-indigo-500 text-white px-3 py-1 rounded-xl hover:bg-indigo-600 transition duration-300 ease-in-out"><i class="fa-solid fa-pen-to-square"></i></button>
+              <button (click)="deleteBeneficiary(beneficiary.beneficiaireId)" class="bg-red-500 text-white px-3 py-0 rounded-xl hover:bg-red-600 transition duration-300 ease-in-out"><i class="fa-solid fa-trash"></i></button>
             </div>
           </div>
         </div>
@@ -46,8 +46,8 @@
               <input type="text" [(ngModel)]="selectedBeneficiary.bankName" name="bankName" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500" required />
             </div>
             <div class="flex justify-end space-x-4">
-              <button type="button" (click)="closeModal()" class="bg-gray-300 text-gray-800 px-6 py-2 rounded-lg hover:bg-gray-400 transition duration-300 ease-in-out">Cancel</button>
-              <button type="submit" class="bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-700 transition duration-300 ease-in-out">Save</button>
+              <button type="button" (click)="closeModal()" class="bg-gray-300 text-gray-800 px-6 py-2 rounded-full hover:bg-gray-400 transition duration-300 ease-in-out">Cancel</button>
+              <button type="submit" class="bg-indigo-600 text-white px-6 py-2 rounded-full hover:bg-indigo-700 transition duration-300 ease-in-out">Save</button>
             </div>
           </form>
         </div>
